# SPDX-FileCopyrightText: 2026 Vector Informatik GmbH
#
# SPDX-License-Identifier: MIT

load("@rules_cc//cc:defs.bzl", "cc_library")

package(default_visibility = ["//visibility:public"])

# RPC wire protocol interface library
cc_library(
    name = "silkit_wire_rpc_interface",
    hdrs = ["WireRpcMessages.hpp"],
    includes = ["."],
    deps = [
        "//SilKit/source/wire/util:silkit_wire_util_interface",
        "//SilKit/source/util:silkit_util_uuid_interface",
    ],
    visibility = ["//visibility:public"],
)
